--- a/Client/Aiyo-Client/Aiyo-Client/Aiyo-Client.csproj
+++ b/Client/Aiyo-Client/Aiyo-Client/Aiyo-Client.csproj
@@ -48,4 +48,10 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.SharePointOnline.CSOM" Version="16.1.23109.12000" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+	  <PackageReference Include="SocketIOClient" Version="3.0.7" />
+	</ItemGroup>
+
 </Project>
