Updates to layout

--- a/Client/Aiyo-Client/Aiyo-Client/Aiyo-Client.csproj
+++ b/Client/Aiyo-Client/Aiyo-Client/Aiyo-Client.csproj
@@ -49,9 +49,22 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Raw\AppInfo.json" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <PackageReference Include="Microsoft.SharePointOnline.CSOM" Version="16.1.23109.12000" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	  <PackageReference Include="SocketIOClient" Version="3.0.7" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Controls\MessageBubble.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
